<resources>
    <string name="app_name">Login Sesame</string>
    <string name="user_name"></string>
    <string name="password"></string>
    <string name="email"></string>
    <string name="registration_choose_username">Choose Username</string>
    <string name="registration_choose_pwd">Choose Password</string>
    <string name="registration_enter_email">Enter your E-mail</string>
    <string name="btn_login">Login</string>
    <string name="btn_ok">OK</string>
    <string name="btn_cancel">Cancel</string>
    <string name="hint_input_password">Please input your password</string>
    <string name="language_set_text">Set App Language</string>
    <string name="language_en">English</string>
    <string name="language_ru">русский</string>
    <string name="language_chooser_title">Please Choose New Language</string>
    <string name="vault_entry_name">Enter Entry Name</string>
    <string name="vault_url">Enter URL</string>
    <string name="vault_username">Enter Username</string>
    <string name="vault_password">Enter Password</string>
    <string name="vault_save">Save</string>
    <string name="url_or_entryname">Either Entry name or URL must be filled in!</string>
    <string name="error_too_many_users_in_db">Too many Users in Database, check Support for help</string>
    <string name="error_incorrect_pwd">Incorrect Password</string>
    <string name="pwd_overview_text">TextView</string>
    <string name="sortfromAtoZ">Sort by name A to Z</string>
    <string name="sortfromZtoA">Sort by name Z to A</string>
    <string name="delete">Delete</string>
    <string name="search">Search</string>
    <string name="vault_save_changes_alert">Please enter a Password to Save the Changes</string>
    <string name="vault_save_changes_alert_title">No Password</string>
    <string name="vault_cancel_changes_alert_title">Warning: Changes not saved!</string>
    <string name="vault_cancel_changes_alert">Are you sure you want to discard the changes?</string>
    <string name="response_positive">Yes</string>
    <string name="response_negative">No</string>
    <string name="vault_edit_title">Edit Password</string>
</resources>