...
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.026"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp">

        <EditText
            android:id="@+id/vaultnameEntry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="16"
            android:hint="@string/vault_entry_name"
            android:inputType="textPersonName"
...
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/vault_entry_field"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp">

        <EditText
            android:id="@+id/vaultURL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="16"
            android:hint="@string/vault_url"
            android:inputType="textPersonName"
...
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/vault_url_field"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp">

        <EditText
            android:id="@+id/vaultUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="16"
            android:hint="@string/vault_username"
            android:inputType="textPersonName"
...
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vaultURL" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnVaultSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="120dp"
        android:text="@string/vault_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_toggle"
        app:layout_constraintVertical_bias="0.376" />

    <Button
        android:id="@+id/btnVaultCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="120dp"
        android:text="@string/btn_cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
        app:passwordToggleEnabled="true"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp">


        <EditText
            android:id="@+id/vaultPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="16"
            android:hint="@string/vault_password"
            android:inputType="textPassword"
...
