<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/mat_etInputPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:passwordToggleEnabled="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.026"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp">

    <EditText
        android:id="@+id/etInputPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:ems="16"
        android:hint="@string/hint_input_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    </com.google.android.material.textfield.TextInputLayout>



    <Button
        android:id="@+id/btnInputPasswordOK"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/btn_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mat_etInputPassword" />



</androidx.constraintlayout.widget.ConstraintLayout>