...
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.026"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp">

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="180dp"
            android:autofillHints="-"
            android:ems="16"
            android:hint="@string/registration_choose_username"
...
        app:layout_constraintTop_toBottomOf="@+id/mat_etUsername"
        app:passwordToggleEnabled="true"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp">

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:autofillHints="-"
            android:ems="16"
            android:hint="@string/registration_choose_pwd"
...
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/mat_etPassword"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp">

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:autofillHints="-"
            android:ems="16"
            android:hint="@string/registration_enter_email"
...
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnOk"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@android:string/ok"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
